# NDE_Categorization_Pipeline

./: .gitignore  README.md  config.template.json  init.py  nde_pipeline_topic_categories.py  pyproject.toml
archive/: format_gpt_outputs.py  gpt_generate.py  pipeline.py
edam/: EDAM.csv  edam_topics.txt
examples/: batch_processing_example.py  concurr_batch_processing.py  hf_local_example.py  pipeline_example.py  sql_batch_processing.py  sync_processing_example.py
metrics/: __init__.py  base_collector.py  example_usage.py  hf_collector.py  hf_metrics_wrapper.py  hf_pipeline_metrics_example.py  llm_metrics_wrapper.py  openai_collector.py  openi_pipeline_metrics_example.py  pipeline_metrics_example.py  requirements.txt  resource_monitor.py
nde_pipeline/: pipeline_topic_categories.py
pipeline/: __init__.py
pipeline/core/: __init__.py  data_model.py  exceptions.py  pipeline.py
pipeline/input/: __init__.py  base.py  csv_input.py  json_input.py
pipeline/llm/: base.py  concurr_openai_provider.py  hf_local_provider.py  hf_provider.py  openai_provider.py  sql_openai_provider.py
pipeline/output/: __init__.py  base.py  csv_output.py  json_output.py
pipeline/processors/: __init__.py  base.py  normalizer.py  prompt_formatter.py  text_cleaner.py
pipeline/utils/: __init__.py  batch_monitor.py  checkpoint.py  config.py  logging.py  template.py
pipeline/utils/configs/: column_mappings.json
pipeline/utils/templates/: measurement_techniques.txt  open_source_template.txt  prompt_template.txt
