[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
dependencies = [
    "openai",
    "tiktoken",
    "pandas",
    "tqdm",
    "numpy",
    "pathlib",
    "Levenshtein",
    "asyncio",
    "huggingface_hub",
    "transformers",
    "torch",
    "bitsandbytes",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]